# PyImageTrack

./: .gitignore  Cache.py  Configure_19-25_tracking.py  DownloadWMSData.py  PixelMatching.py  PixelMatchingOptimizer.py  README.md  Thesis_visualizations.py  Utils.py  __init__.py  example.py  example2.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.cfg  temporal.tif  test_alignment.py  used_packages.txt
CreateGeometries/: CreateGeometries.py  HandleGeometries.py
DataProcessing/: DataPostProcessing.py  DataPostprocessing.py  ImagePreprocessing.py
ImageTracking/: AlignImages.py  ImageBatch.py  ImageInterpolator.py  ImagePair.py  TrackMovement.py  TrackingResults.py
LossFunctions/: LossFunctions.py
Obsolete_Code/: Configure_19-25_tracking.py  DownloadWMSData.py  example.py
Obsolete_Code/ImageTracking/: ImageInterpolator.py
Parameters/: AlignmentParameters.py  FilterParameters.py  TrackingParameters.py
Plots/: MakePlots.py
PyImageTrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Test_Data/: 2019-07-01.tif.aux.xml  2021-08-01.tif.aux.xml  Area_inside_rock_glacier.dbf  Area_inside_rock_glacier.shp  Area_inside_rock_glacier.shx  Area_outside_rock_glacier.shp  Area_outside_rock_glacier.shx  KBT_hillshade_2019-07.tif.aux.xml  KBT_hillshade_2021-08.tif.aux.xml
Test_Data/Orthophotos_Kaiserberg/: Orthophoto_2015.png.points  Orthophoto_2023.png.points
Test_Data/Orthophotos_Kaiserberg_historic/: 1953_ortho_1m_RG_rend_bw.tif  1953_ortho_1m_RG_rend_bw.tif.aux.xml  1970_ortho_1m_RG_rend_bw.tif  1970_ortho_1m_RG_rend_bw.tif.aux.xml  2003_ortho_1m_RG_rend_bw.tif  2023_ortho_1m_RG_rend_bw.tif  Area_inside_rock_glacier.qix  Area_inside_rock_glacier.shp  Area_inside_rock_glacier.shx  Area_outside_rock_glacier.dbf  Area_outside_rock_glacier.shp  Area_outside_rock_glacier.shx  Area_outside_rock_glacier_adjusted.dbf  Area_outside_rock_glacier_adjusted.qmd  Area_outside_rock_glacier_adjusted.shp  Area_outside_rock_glacier_adjusted.shx  image_dates.csv  image_pairs.csv
Test_Data/Winnebachgebiet/: DEM_2006_2007.png.points  DEM_2017_2020.png.points  moving_area.dbf  (+5 more)
configs/: drone_hs.toml  example_config.toml  smoketest_drone_hs.toml  timelapse_fake_ortho.toml
dataloader/: DownloadWMSData.py  HandleFiles.py  TrackingParameters.py  read_files.py
docs/: absolute_beginner_installation.md  documentation_review_report.md  pyimagetrack_documentation.md
plans/: console_output_improvement_plan.md  console_output_review.md  stable_area_fallback_plan.md  total_movement_unit_plan.md
(+52 files in other folders)
