[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyImageTrack"
version = "0.2"
description = "A Python library for image tracking on rock glaciers"
authors = [
  { name = "Simon Ebert", email = "simon.ebert.kn@gmx.de" },
  { name = "Lisa Rehn" },
]
maintainers = [
  { name = "Lisa Rehn" },
]
readme = "README.md"
requires-python = ">=3.11"
# ToDo: Adjust dependencies section
dependencies = [
    "geocube>=0.7.1",
    "geopandas>=1.0.1,<1.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1,<2.2",
    "opencv-python>4.12,<4.13",
    "pandas>=2.2.2,<2.3",
    "rasterio>=1.4.3,<1.5",
    "requests>=2.32.4",
    "scipy>=1.14.1,<1.15",
    "scikit-image>=0.25.2,<0.26",
    "scikit-learn>=1.6.1",
    "shapely>=2.0.6,<2.1",
    "tqdm>=4.67.1,<5",
    "tomli>=2.0.1; python_version < \"3.11\"",
    # Note: tomli is only needed for Python < 3.11, but kept for compatibility
]

[project.scripts]
pyimagetrack-run = "PyImageTrack.run_pipeline:main"
pyimagetrack-batch = "PyImageTrack.BatchProcessor:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["PyImageTrack*"]
