[metadata]
name = PyImageTrack
version = 0.1
author = Simon Ebert
author_email = simon.ebert.kn@gmx.de
description = A Python library for image tracking on rock glaciers

[options]
packages = find:
include =
    PyImageTrack*

[options.package_data]
# Include PixelMatching.py
your_library = PixelMatching.py
